--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,9 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* --background: #ffffff;
+  --foreground: #171717; */
+  /* background: rgb(65, 65, 65); */
   font-family: "Poppins", sans-serif;
 }
 
