--- a/app/globals.css
+++ b/app/globals.css
@@ -5,10 +5,13 @@
 @tailwind utilities;
 
 :root {
-  /* --background: #ffffff;
-  --foreground: #171717; */
-  /* background: rgb(65, 65, 65); */
-  font-family: "Poppins", sans-serif;
+  --background-color: #ffffff;
+  --text-color: #000000;
+}
+
+[data-theme="dark"] {
+  --background-color: #121212;
+  --text-color: #ffffff;
 }
 
 /* 
@@ -30,3 +33,15 @@ body {
     text-wrap: balance;
   }
 } */
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+  /* Hide scrollbar for WebKit browsers */
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none;
+  /* Hide scrollbar for IE and Edge */
+  scrollbar-width: none;
+  /* Hide scrollbar for Firefox */
+}
